style: fix carousel icons spacing

--- a/src/components/SkillsCarousel/style.css
+++ b/src/components/SkillsCarousel/style.css
@@ -15,7 +15,6 @@
   background-color: transparent;
   display: flex;
   height: 100%;
-  justify-content: flex-start;
   overflow: hidden;
   width: 100%;
 }
